--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "skrollr-stylesheets",
-  "title": "skrollr-stylesheets",
-  "description": "Parses skrollr compatible keyframe rules from stylesheets and applies them to elements as data attributes.",
-  "version": "0.0.5",
-  "homepage": "https://github.com/Prinzhorn/skrollr",
-  "author": {
-    "name": "Alexander Prinzhorn",
-    "email": "alexander@prinzhorn.it",
-    "url": "http://www.prinzhorn.it/"
-  },
+  "name": "scrollover",
+  "description": "Make CSS animations scroll activated",
+  "version": "0.0.1",
+  "homepage": "https://github.com/quadroid/scrollover",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Prinzhorn/skrollr-stylesheets.git"
+    "url": "git://github.com/quadroid/scrollover.git"
   },
   "bugs": {
-    "url": "https://github.com/Prinzhorn/skrollr-stylesheets/issues"
+    "url": "https://github.com/quadroid/scrollover/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/Prinzhorn/skrollr-stylesheets/blob/master/LICENSE.txt"
+      "url": "https://github.com/quadroid/scrollover/blob/master/LICENSE.txt"
     }
   ],
-  "main": "dist/skrollr.stylesheets.min.js",
+  "main": "dist/scrollover.min.js",
   "engines": {
     "node": ">=0.8"
   },
@@ -34,7 +28,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-jshint": "~0.3.0",
-    "grunt-contrib-qunit": "~0.2.0"
+    "grunt-contrib-qunit": "~0.2.0",
+    "skrollr": "^0.6.26"
   },
   "keywords": []
 }
