--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
   "scripts": {
     "test": "grunt travis --verbose"
   },
+  "dependencies": {
+    "skrollr": "^0.6.26"
+  },
   "devDependencies": {
     "grunt-cli": "~0.1.7",
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-jshint": "~0.3.0",
-    "grunt-contrib-qunit": "~0.2.0",
-    "skrollr": "^0.6.26"
+    "grunt-contrib-qunit": "~0.2.0"
   },
   "keywords": []
 }
